--- a/conda.yaml
+++ b/conda.yaml
@@ -2,6 +2,7 @@ name: tutorial
 channels:
   - defaults
 dependencies:
+  - python=3.7.0
   - numpy=1.17.2
   - pandas=0.25.1
   - scikit-learn=0.19.2
